# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
day1/: day1_part1.py  day1_part1_packages.py  day1_part2.py  day1_test_solution.py  day_1.py
day2/: day2_part1.py  day2_part2.py  day2_test_solution.py
day3/: day3_part1_numpy.py  day3_part1_pure_python.py  day3_test_numpy_solution.py  day3_test_pure_python_solution.py
day3/part1/: day3_part1_numpy.py  day3_part1_pure_python.py  day3_test_numpy_solution.py  day3_test_pure_python_solution.py
day3/part2/: day3_part2_numpy.py  day3_part2_test_numpy_solution.py
day4/part1/: bingo_board.py  bingo_game.py  day4_part1.py  read_data.py  test_solution.py
day4/part2/: day4_part2.py  test_solution.py
day5/: read_data.py  vent_location.py  vent_map.py
day5/part1/: day5_part1.py  read_data.py  test_solution.py  vent_location.py  vent_map.py
day5/part2/: day5_part2.py  test_solution.py
day6/: read_data.py
day6/part1/: day6_part1.py  fish.py  fish_population.py  test_solution.py
day6/part2/: day6_part2.py  fish_population_part2.py  test_solution.py
day7/: find_minimum.py  read_data.py
day7/part1/: day7_part1.py  test_solution.py
day7/part2/: day7_part2.py  test_solution.py
