[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Florian Holl <florian.holl@triaz.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
